ipc/ipdl/test/ipdl/ok/headerProto.ipdl
include header;

namespace c {

protocol headerProto {
child:
    async __delete__(foo a, baz b, Inner1 c, Inner2 d, X x);
};

}
