ipc/ipdl/test/ipdl/error/multimanDupMgrs.ipdl
include protocol "multimanDupMgrsMgr.ipdl";

protocol multimanDupMgrs {
    manager multimanDupMgrsMgr or multimanDupMgrsMgr;

child:
    __delete__();
};
